classDiagram
    class CareTask {
        +str title
        +int duration_minutes
        +str priority
        +str task_type
        +bool required
        +str preferred_time
        +str frequency
        +bool completed
        +date next_due
        +mark_complete() void
        +__repr__() str
    }

    class Pet {
        +str name
        +str species
        +int age
    }

    class Owner {
        +str name
        +int available_minutes
        +list~str~ preferences
    }

    class ScheduledTask {
        +CareTask task
        +datetime start_time
        +str reason
        +end_time() datetime
    }

    class DailyPlan {
        +list~ScheduledTask~ scheduled_tasks
        +int total_minutes
        +summary() str
    }

    class Scheduler {
        +Owner owner
        +Pet pet
        +list~CareTask~ tasks
        +prioritize_tasks() list~CareTask~
        +build_plan() DailyPlan
        +detect_conflicts(plan: DailyPlan) list~str~
        +explain_plan(plan: DailyPlan) str
        -_reason(task: CareTask, remaining_minutes: int) str
        -_preference_score(task: CareTask) int
    }

    Scheduler --> Owner : uses
    Scheduler --> Pet : plans for
    Scheduler --> CareTask : prioritizes
    Scheduler --> DailyPlan : builds
    DailyPlan --> ScheduledTask : contains
    ScheduledTask --> CareTask : schedules
